# remotetrade

./: .archive.env.example  .env.example  .gitignore  README.md  patterns.json  pyproject.toml  stock_patterns.json
.github/workflows/: paper-trade.yml
deploy/: README.md  backup-data.sh  digitalocean-startup.sh  install.sh  reset-maker-paper-window.sh  update.sh  upload-github-release-asset.sh
deploy/systemd/: remotetrade-backup.service  remotetrade-backup.timer  remotetrade-bitbank-poly-maker.service  remotetrade-bitbank-route-probe.service  remotetrade-bitbank-route-probe.timer  remotetrade-boba-atomic-route-probe.service  remotetrade-boba-atomic-route-probe.timer  remotetrade-boba-cex-dex-probe.service  (+29 more)
docs/: botter-strategy-research-2026-06.md  botter_research_notes.md  polymarket-live-readiness.md
tests/: test_arbitrage.py  test_bitbank_poly_maker.py  test_bitbank_route_probe.py  test_boba_atomic_route_probe.py  test_boba_cex_dex_probe.py  test_boba_synapse_probe.py  test_boba_zencha_probe.py  test_bsc_qash_route_probe.py  test_coincheck_poly_maker.py  test_coincheck_poly_maker_analysis.py  test_dex_route_probe.py  test_fill_simulator.py  test_health.py  test_inventory.py  test_limit_paper.py  test_maker_probe.py  test_notify.py  test_paper.py  test_polymarket_clob.py  test_polymarket_replay.py  test_polymarket_rtds.py  test_polymarket_stock_bridge.py  test_polymarket_trade_analysis.py  test_profit_guard.py  test_report.py  test_route_arbitrage.py  test_spread.py  test_strategy.py  test_variants.py  test_venue_discovery.py  test_wick.py  test_zencha_live.py
(+39 files in other folders)
